--- a/part-1-chapter-1-helloWorld/styles.css
+++ b/part-1-chapter-1-helloWorld/styles.css
@@ -3,7 +3,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: auto;
+    height: 100vh;
     margin:0;
 }
 
